[gd_scene load_steps=5 format=3 uid="uid://sjlvlhqdwbun"]

[ext_resource type="Script" path="res://scenes/core/planet.gd" id="1_g8tf6"]
[ext_resource type="Texture2D" uid="uid://cbqykrytu6s3m" path="res://assets/art/Graphics/Planet.png" id="1_xh6gv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xoqpg"]
radius = 77.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jko0x"]
radius = 104.077

[node name="Planet" type="StaticBody2D"]
script = ExtResource("1_g8tf6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -1.19209e-07)
scale = Vector2(0.384, 0.384)
texture = ExtResource("1_xh6gv")

[node name="PlanetCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xoqpg")

[node name="PlanetGravity" type="Area2D" parent="."]
collision_layer = 0
gravity_point = true
gravity_point_unit_distance = 1000.0
gravity_point_center = Vector2(0, 0)
gravity_direction = Vector2(0, 0)

[node name="GravityCollision" type="CollisionShape2D" parent="PlanetGravity"]
shape = SubResource("CircleShape2D_jko0x")

[connection signal="body_entered" from="PlanetGravity" to="." method="_on_planet_gravity_body_entered"]
